--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-* {}
-
 :root {
   --main-color: #0075ff;
   --blue-alt-color: #0d69d5;
@@ -17,7 +15,6 @@ html {
 }
 
 .title {
-
   text-align: center;
 }
 
@@ -61,6 +58,11 @@ html {
   color: white;
 }
 
+.tool.active {
+  border: 2px solid var(--main-color, #2196F3);
+    border-radius: 4px;
+}
+
 .clear {
   height: 100%;
   width: 5%;
@@ -86,7 +88,6 @@ html {
   box-shadow: 0px 0px 10px 1px #00000040;
   cursor: pointer;
 }
-
 
 .size-display {
   margin: 0;
@@ -132,39 +133,28 @@ button {
   border-radius: 5px;
 }
 
-/* ToolTip Style */
-
 .tooltip {
   position: relative;
-  /* Für das Positionieren des Tooltips */
 }
 
-/* Tooltip-Style */
 .tooltip:hover::after {
   content: attr(data-tooltip);
-  /* Den Tooltip-Text aus dem data-tooltip-Attribut holen */
   position: absolute;
   left: 50%;
   bottom: 100%;
-  /* Oberhalb des Elements */
   transform: translateX(-50%);
   background-color: #333;
-  /* Dunkler Hintergrund für den Tooltip */
   color: #fff;
-  /* Weißer Text */
   padding: 5px 10px;
   border-radius: 5px;
   white-space: nowrap;
-  /* Kein Zeilenumbruch */
   opacity: 1;
   pointer-events: none;
-  /* Keine Interaktion mit dem Tooltip */
   z-index: 1000;
   transition: opacity 0.3s ease-in-out;
   font-size: 12px;
 }
 
-/* Tooltip ist standardmäßig versteckt */
 .tooltip::after {
   opacity: 0;
 }
